# guild-helper

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  clear_commands.py  docker-compose.yml  main.py  pyproject.toml
src/DiscordBot/: DiscordBot.py  bot.py  permissions.py
src/DiscordBot/Commands/: __init__.py  configuration.py  configuration_cog.py  economy.py  economy_cog.py  help.py  logs.py  logs_cog.py  lootsplit_cog.py  lootsplits.py  register.py  registration_cog.py
src/Exceptions/: player_not_found.py
src/Interfaces/: IAlbionApiManager.py  IConfigurationManager.py  IDatabaseManager.py  IEconomyManager.py  ILogManager.py  ILootsplitManager.py  IPermissionManager.py  __init__.py
src/Model/: __init__.py  action.py  alliance.py  auction.py  configuration.py  guild.py  log.py  lootsplit.py  player.py  split_sale.py
src/Services/: AlbionApiManager.py  ConfigurationManager.py  DatabaseManager.py  EconomyManager.py  LogManager.py  LootsplitManager.py  PermissionManager.py  __init__.py
src/utils/: logger.py
