[project]
name = "guild-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "discord>=2.3.2",
    "dotenv>=0.9.9",
    "ipynb>=0.5.1",
    "pydantic>=2.12.5",
    "pymongo>=4.16.0",
    "requests>=2.32.5",
    "ruff>=0.15.4",
]
